# icoft

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  test_v5.py  test_v6.py
.github/workflows/: publish.yml
.trae/: rules
docs/: DESIGN.md  ICON_EFFECTS.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  THRESHOLD_ANALYSIS_REPORT.md  icoft_project_overview.md
examples/: batch_vectorization_test.py  check_vectorization_fill.py  rename_origin_files.py  test_edge_erosion.py  vectorization_summary.py
src/icoft/: cli.py
src/icoft/core/: generator.py  onnx_processor.py  processor.py  rmbg.py  u2net.py  watermark_advanced.py
tests/: test_cli.py  test_generator.py  test_processor.py
